[project]
name = "reflex-fortune-sheet"
version = "0.1.1"
description = "Reflex wrapper for FortuneSheet with Excel import/export (FortuneExcel)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reflex>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reflex_fortune_sheet"]
# Explicitly ship the React shim (required at runtime by rx.asset).
force-include = { "reflex_fortune_sheet/fortune_sheet.jsx" = "reflex_fortune_sheet/fortune_sheet.jsx" }

[tool.hatch.build.targets.sdist]
include = [
    "/reflex_fortune_sheet",
    "/README.md",
    "/docs",
    "/pyproject.toml",
]
